--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: true
 before_deploy: npm install -g cf-blue-green
 deploy:
   provider: script
-  script: npm install && cf-blue-green-travis
+  script: cf-blue-green-travis
   on:
     branch: master
     repo: lionelmace/travis-ci
