added env vars in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,9 @@ deploy:
   on:
     branch: master
     repo: lionelmace/travis-ci
+env:
+- CF_API=https://api.eu-gb.bluemix.net
+- CF_ORGANIZATION=org-ibm
+- CF_SPACE=demo
+- CF_APP=travis-ci
+- CF_USERNAME=lionel.mace@fr.ibm.com
