--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@ applications:
 - path: .
   memory: 256M
   instances: 1
-  domain: lm.eu-gb.mybluemix.net
+  domain: eu-gb.mybluemix.net
   name: travis-ci
   host: travis-ci
   disk_quota: 1024M
