--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 node_js:
   - "4"
 sudo: true
-before_deploy: npm install -g cf-blue-green
+# before_deploy: npm install -g cf-blue-green
 deploy:
-  provider: script
-  script: cf-blue-green-travis
+#  provider: script
+#  script: cf-blue-green-travis
   on:
     branch: master
     repo: lionelmace/travis-ci
