--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,19 @@ language: node_js
 node_js:
   - "4"
 sudo: true
-# before_deploy: npm install -g cf-blue-green
-deploy:
+
+#before_deploy: npm install -g cf-blue-green
+#deploy:
 #  provider: script
 #  script: cf-blue-green-travis
+#  on:
+#    branch: master
+#    repo: lionelmace/travis-ci
+
+deploy:
+  edge: true
+  skip_cleanup: true
+  provider: cloudfoundry
   on:
     branch: master
     repo: lionelmace/travis-ci
