--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
   - "4"
-sudo: true
-
+#sudo: true
 #before_deploy: npm install -g cf-blue-green
 #deploy:
 #  provider: script
