--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,22 @@ node_js:
 #  on:
 #    branch: master
 #    repo: lionelmace/travis-ci
+#env:
+#  global:
+#    - CF_API=https://api.eu-gb.bluemix.net
+#    - CF_ORGANIZATION=org-ibm
+#    - CF_SPACE=demo
+#    - CF_APP=travis-ci
+#    - CF_USERNAME=lionel.mace@fr.ibm.com
 
 deploy:
   edge: true
   skip_cleanup: true
   provider: cloudfoundry
+  api: https://api.eu-gb.bluemix.net
+  organization: org-ibm
+  space: demo
+  username: lionel.mace@fr.ibm.com
   on:
     branch: master
     repo: lionelmace/travis-ci
-env:
-  global:
-    - CF_API=https://api.eu-gb.bluemix.net
-    - CF_ORGANIZATION=org-ibm
-    - CF_SPACE=demo
-    - CF_APP=travis-ci
-    - CF_USERNAME=lionel.mace@fr.ibm.com
